# sharepoint-file-upload-action

./: README.md  action.yml  pyproject.toml
src/: send_to_sharepoint.py
